--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "vuepress-starter",
+  "name": "liuqiankun521.github.io",
   "version": "1.0.0",
-  "description": "",
+  "description": "for github pages",
   "main": "index.js",
   "scripts": {
-    "dev": "vuepress dev docs",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs",
     "build": "vuepress build docs"
   },
-  "author": "",
-  "license": "ISC",
+  "dependencies": {
+    "@vssue/api-github-v4": "^1.4.0",
+    "@vssue/vuepress-plugin-vssue": "^1.4.6"
+  },
   "devDependencies": {
-    "vuepress": "^1.7.1"
+    "@vuepress/plugin-back-to-top": "^1.6.0",
+    "@vuepress/plugin-last-updated": "^1.6.0",
+    "@vuepress/plugin-medium-zoom": "^1.6.0",
+    "@vuepress/plugin-pwa": "^1.6.0",
+    "vuepress": "^1.0.0"
   }
 }
