--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "for github pages",
   "main": "index.js",
   "scripts": {
-    "docs:dev": "vuepress dev docs",
+    "dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
     "build": "vuepress build docs"
   },
