--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@vuepress/plugin-last-updated": "^1.6.0",
     "@vuepress/plugin-medium-zoom": "^1.6.0",
     "@vuepress/plugin-pwa": "^1.6.0",
+    "browserslist": "^4.21.10",
+    "caniuse-lite": "^1.0.30001525",
     "vuepress": "^1.0.0"
   }
 }
